--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,1 +1,5 @@
-target_sources_ifdef(CONFIG_AUTO_CORRECT_MODULE app PRIVATE auto_correct.c)
+cmake_minimum_required(VERSION 3.13.1)
+
+if (CONFIG_AUTO_CORRECT_MODULE)
+  target_sources(app PRIVATE auto_correct.c)
+endif()
